--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -762,6 +762,7 @@ h6,
 }
 
 
+
 #ext_menu-7 .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -845,6 +846,14 @@ h6,
 }
 #features3-k SPAN {
   font-size: 14px;
+}
+#header3-n .mbr-section-title,
+#header3-n .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-n H3 {
+  color: #ffffff;
+  font-family: 'Oswald', sans-serif;
 }
 #features3-f .btn {
   font-size: 14px;
